docs(week6-NW) : IP 주소 체계 정리 내용 수정

--- a/kinam-ssafy/NW/03. IP주소 체계.md
+++ b/kinam-ssafy/NW/03. IP주소 체계.md
@@ -1,12 +1,37 @@
 # IP 주소 체계
+####
+## 들어가기 전에
+
+![alt text](image/1.png)
+
+위 사진처럼 근거리 통신망이라는 것이 있는데 이는 같은 네트워크 대역에서 통신을 하는 것임.
+
+Battle.net 처럼 다른 네트워크 대역을 사용하는 사람들과 게임을 하려면?
+
+LAN(Local Area Network)의 개념에서 더 확장하여 WAN(Wide Area Network)의 개념으로 접근해야 함
+
+![alt text](image/2.png)
+
+우리가 배울 네트워크 계층(3계층)은 멀리 떨어진 곳에 존재하는 네트워크까지 어떻게 데이터를 전달할 지 제어하는 일을 담당
 
 ## IP 주소
 
 ### IP 주소 개념
 
+```
+LAN 에서의 통신은 MAC 주소로 통신할 수 있지만 다른 네트워크 대역에는 데이터를 보낼 수 없음
+
+따라서 MAC 주소가 아닌 네트워크를 식별할 수 있는 다른 주소가 필요
+```
+
 **IP 주소 (Internet Protocol Address)**
 - 네트워크 상에서 각 장치를 구별하기 위한 **논리적 주소**
 - vs. MAC 주소: 물리적 주소 (데이터링크 계층)
+
+
+> IP 주소를 안다면 그 목적지까지 데이터를 보낼 수 있음  
+> 데이터를 어떤 경로로 보낼지도 결정해야함 => "라우팅"
+
 
 **구조**
 ```
@@ -32,6 +57,15 @@
 **문제점**
 - 주소 고갈 문제 → 사설 IP, NAT 등의 기법 등장
 
+
+![alt text](image/3.png)
+
+> 출발지 IP 주소 : 32-bit Source IP Address  
+> 목적지 IP 주소 :  32-bit Destination IP Address  
+
+
+
+
 <br>
 
 ### IPv6 (Internet Protocol version 6)
@@ -45,6 +79,11 @@
 **특징**
 - IPv4 주소 부족 대비 개발
 - 동적 할당(DHCP)과 NAT 덕분에 IPv4 여전히 널리 사용 중
+
+![alt text](image/4.png)
+
+> 340 '간' 개의 IP주소 생성 가능 ( 340조의 1조 배의 1조 배 )
+
 
 <br>
 
@@ -63,9 +102,40 @@
 
 <br>
 
+```
+TTL 이란?
+- 패킷이 네트워크에서 무한정 떠돌아다니는 것을 방지하는 "생존 시간" 값
+- 라우터를 하나 거칠 때마다 1씩 감소
+- 0이 되면 패킷 폐기
+
+Time to Live는 1 TTL을 1초 단위로 만들었는데 실제로는 라우터마다 처리 시간이 달라 1 TTL이 1Hop 단위인 Hop Limit으로 이름만 바꿈
+
+
+브로드캐스트란?
+- 네트워크 내 모든 장치에게 한 번에 데이터를 보내는 방식
+
+예: 192.168.1.0/24 네트워크
+
+브로드캐스트 주소: 192.168.1.255
+→ 이 주소로 보내면 192.168.1.1~254 모든 장치가 받음
+
+IPv6에서는 브로드캐스트 미지원
+- 대신 멀티캐스트 사용
+- 브로드캐스트는 모든 장치가 처리해야 해서 네트워크 부담 ↑
+- 멀티캐스트: 필요한 그룹에게만 전송 (더 효율적)
+```
+
+
 ---
 
 ## 클래스 기반 주소 (Classful Addressing)
+
+### Classful IP Addressing
+ - IP주소의 범위를 각각 클래스별로 나눠가지고 클래스에 맞게 사용하는 IP 주소  
+ - IPv4 에서 IP 주소의 비트 수는 32개, 여기서 32개의 비트를 8개씩 묶어서 4개의 필드를 구성하여 네트워크의 주소와 호스트 주소를 구분
+ - 필드를 옥텟(Octet)이라고도 불리며 각 옥텟은 "." 으로 구분하며 총 4개의 옥텟이 존재
+
+![alt text](image/5.png)
 
 ### Class A
 ```
@@ -76,8 +146,11 @@
 └─8비트─┴────────24비트───────────┘
 네트워크        호스트
 
-네트워크 수: 126개 (0과 127 제외)
-호스트 수: 약 1677만 개
+네트워크 수: 126개 (0과 127 제외) >> 첫 번째 옥텟으로 나타낼 수 있는 주소  
+호스트 수: 약 1677만 개 (나머지 24개의 bits 로 나타낼 수 있는 주소의 수 (2^24) -2 개) 
+
+모두가 1인 경우 브로드캐스트 주소로 사용하고 모두 0인 경우에는 네트워크 주소로 사용하기 때문
+
 용도: 대규모 조직
 ```
 
@@ -115,6 +188,12 @@
 | D | 224.0.0.0 ~ 239.255.255.255 | 멀티캐스트 |
 | E | 240.0.0.0 ~ 255.255.255.255 | 예약 (실험용) |
 
+
+### Classful 방식의 문제점
+- 클래스에 딱 맞게 쓰다보니 IP 주소가 낭비
+
+만약, 6대의 컴퓨터만 존재하는 PC방이 있다면 6개의  호스트 주소만 할당시키면 되는데 클래스 방식을 사용한다면 200개가 넘는 호스트 주소가 불필요하게 할당
+
 <br>
 
 ---
@@ -125,19 +204,30 @@
 
 **개념**
 - 네트워크 부분과 호스트 부분을 구분하는 값
+- 서브넷팅은 자원을 효율적으로 분배하기 위해 네트워크 영역과 호스트 영역을 분할
+- 서브넷팅을 하기 위해 필요한 것이 서브넷 마스크
+- IP주소처럼 2진수 32비트로 구성되어있고 10진수로 변환하여 표기
+- 2진수로 표기했을 때 1로 시작을 하며 1과 1사이에는 0이 올 수 없다는 규칙을 가지고 있음
+
+
+### CIDR (Classless Inter-Domain Routing)
+
+**개념**
+- 클래스 구분 없이 서브넷 마스크로 유연하게 네트워크 크기 결정
+
+
+
+
 
 **동작**
 ```
-IP 주소:       192.168.1.100
-서브넷 마스크:  255.255.255.0
-
-이진수:
-IP:   11000000.10101000.00000001.01100100
-Mask: 11111111.11111111.11111111.00000000
-      └────────네트워크─────┴─호스트─┘
-
-AND 연산 → 네트워크 주소: 192.168.1.0
+IP 주소:       192.168.0.138 // C 클래스
+서브넷 마스크:  255.255.255.248
 ```
+
+![alt text](image/6.png)
+
+
 
 **표기법**
 - 점 표기법: `255.255.255.0`
@@ -145,50 +235,30 @@ AND 연산 → 네트워크 주소: 192.168.1.0
 
 <br>
 
-### CIDR (Classless Inter-Domain Routing)
-
-**개념**
-- 클래스 구분 없이 서브넷 마스크로 유연하게 네트워크 크기 결정
-
-**주요 CIDR 표기**
-| CIDR | 서브넷 마스크 | 총 주소 | 사용 가능 호스트 |
-| --- | --- | --- | --- |
-| /24 | 255.255.255.0 | 256개 | 254개 |
-| /25 | 255.255.255.128 | 128개 | 126개 |
-| /26 | 255.255.255.192 | 64개 | 62개 |
-| /27 | 255.255.255.224 | 32개 | 30개 |
-| /28 | 255.255.255.240 | 16개 | 14개 |
-| /30 | 255.255.255.252 | 4개 | 2개 (P2P용) |
-
-**서브넷팅 예시**
-```
-192.168.1.0/24를 4개로 나누기:
-
-/24 → /26으로 변경
-
-192.168.1.0/26    (0~63)
-192.168.1.64/26   (64~127)
-192.168.1.128/26  (128~191)
-192.168.1.192/26  (192~255)
-
-각 서브넷: 64개 주소 (62개 사용 가능)
-```
-
-**계산 공식**
-```
-호스트 비트 수 = 32 - 서브넷 마스크 비트 수
-사용 가능 호스트 수 = 2^호스트비트 - 2
-
--2 이유:
-- 네트워크 주소 (호스트 비트 모두 0)
-- 브로드캐스트 주소 (호스트 비트 모두 1)
-```
-
-<br>
-
 ---
 
 ## 특수 IP 주소
+
+![alt text](image/7.png)
+
+```
+보통 인터넷을 신청하면 공유기가 오는데, 공인 IP를 받은 것과 마찬가지.
+
+공유기랑 연결하는 순간 사설 IP를 할당 받아서 사용하게 됨
+
+실제 네트워크 세상에는 오로지 공인 IP 주소만 보임
+
+공인 IP 하나 당 여러 사설 네트워크 대역이 따로 존재하기 때문에 IP 주소 부족을 어느정도 해소가능
+```
+
+![alt text](image/8.png)
+```
+게이트웨이: 외부 세상으로 나가는 문이 어딘지를 알려주는 역할
+
+ IPv4(사설IP)주소가 192.168.0.138 인 PC에서 다른 네트워크 대역의 데이터를 요청을 한다면 공유기를 거쳐서 가야함
+
+ 게이트웨이 192.168.0.1 라는 문을 통과해 WAN으로 연결
+```
 
 ### 사설 IP (Private IP)
 
@@ -235,29 +305,3 @@ AND 연산 → 네트워크 주소: 192.168.1.0
 <br>
 
 ---
-
-## 핵심 정리
-
-### IP 주소 구성
-```
-IP 주소 = 네트워크 ID + 호스트 ID
-서브넷 마스크로 구분
-```
-
-### 클래스별 특징
-- **Class A**: /8, 대규모 네트워크
-- **Class B**: /16, 중규모 네트워크
-- **Class C**: /24, 소규모 네트워크
-
-### CIDR의 장점
-- 유연한 서브넷 크기 조정
-- IP 주소 효율적 사용
-- /n 표기법으로 간단히 표현
-
-### 사설 IP vs 공인 IP
-- **사설 IP**: 내부 네트워크 전용, NAT 필요
-- **공인 IP**: 인터넷 직접 사용 가능
-
-### IPv4 vs IPv6
-- **IPv4**: 32비트, 고갈 문제
-- **IPv6**: 128비트, 차세대 표준, 단순한 헤더
