--- a/kinam-ssafy/NW/04. 라우팅.md
+++ b/kinam-ssafy/NW/04. 라우팅.md
@@ -5,6 +5,7 @@
 **라우팅(Routing)**
 - 출발지에서 목적지까지 데이터를 전달하기 위한 **최적 경로를 결정**하는 과정
 - 네트워크 계층(Layer 3)의 핵심 기능
+- 넓은 의미에서는 경로 결정과 패킷 전송까지 합쳐 패킷을 출발지에서 목적지까지 전달하는 과정을 말함
 
 **라우터(Router)**
 - 라우팅을 수행하는 네트워크 장비
@@ -45,9 +46,54 @@
 | 10.0.0.0 | /8 | 192.168.1.1 | eth0 | 1 |
 | 0.0.0.0 | /0 | 192.168.1.254 | eth0 | 10 |
 
-**특수 항목**
-- `0.0.0.0/0`: 기본 게이트웨이 (모든 목적지의 기본 경로)
-- 직접연결: 라우터에 직접 연결된 네트워크
+
+```
+인터페이스?
+
+직접 연결
+목적지: 192.168.1.0/24
+게이트웨이: 직접연결
+인터페이스: eth0
+
+의미:
+→ eth0로 나가면 바로 목적지 네트워크
+→ 중간 라우터 없이 직접 도달 가능
+
+
+간접 연결
+목적지: 10.0.0.0/8
+게이트웨이: 192.168.1.1
+인터페이스: eth0
+
+의미:
+→ eth0로 나가서 192.168.1.1 라우터를 거쳐야 함
+→ 다음 홉 라우터 필요
+
+```
+
+```
+메트릭(Metric)?
+ - 경로의 비용(Cost) 또는 우선순위
+→ "이 경로가 얼마나 좋은지"를 나타내는 숫자
+
+
+문제 상황: 같은 목적지로 가는 경로가 여러 개인 경우
+
+경로 1:
+게이트웨이: 192.168.1.1
+인터페이스: eth0
+메트릭: 1
+
+경로 2:
+게이트웨이: 192.168.1.2
+인터페이스: eth1
+메트릭: 5
+
+선택: 메트릭이 낮은 경로 1 사용 (1 < 5)
+
+```
+
+
 
 <br>
 
@@ -55,10 +101,15 @@
 
 ## 라우팅 방식
 
+- 사람이 수동으로 설정하는 정적 라우팅과 라우팅 프로토콜로 인해 자동으로 할당 받는 동적 라우팅이 있음
+
+![alt text](image/9.png)
+
 ### 정적 라우팅 (Static Routing)
 
 **개념**
 - 관리자가 수동으로 경로 설정
+- 경로 정보를 라우터에 미리 저장하여 중개
 
 **특징**
 ```
@@ -238,6 +289,13 @@
 | 수렴 속도 | 빠름 |
 | 용도 | 중대규모 네트워크, 기업망 |
 
+```
+LSA(Link State Advertisement)
+
+- OSPF 프로토콜에서 사용하는 링크 상태 정보 패킷
+- 각 라우터가 자신의 링크 상태를 네트워크 전체에 알리는 메시지
+```
+
 **장단점**
 ```
 장점:
@@ -270,115 +328,29 @@
 - 안정성과 확장성 우선
 ```
 
-<br>
-
----
-
-## 메트릭 (Metric)
-
-**개념**
-- 경로의 우선순위를 결정하는 **비용 값**
-
-**종류**
-
-| 메트릭 | 의미 | 사용 프로토콜 |
-| --- | --- | --- |
-| 홉 카운트 | 거쳐가는 라우터 수 | RIP |
-| 대역폭 | 링크 속도 | OSPF, EIGRP |
-| 지연(Delay) | 전송 지연 시간 | EIGRP |
-| 신뢰성 | 에러율 | EIGRP |
-| 부하 | 트래픽 양 | EIGRP |
-| MTU | 최대 전송 단위 | 일부 프로토콜 |
-
-**경로 선택**
 ```
-메트릭 값이 낮을수록 우선순위 높음
+AS (Autonomous System)
+- 하나의 관리 주체가 운영하는 네트워크 집합
 
-예시:
-경로 A: 메트릭 10
-경로 B: 메트릭 20
-→ 경로 A 선택
+예시
+AS 3786: KT
+AS 9318: SK브로드밴드  
+AS 17858: LG유플러스
+```
+
+```
+정책 기반 라우팅
+- 단순히 "최단 경로"가 아닌 "정책"에 따라 경로를 선택하는 방식
+
+목적지까지:
+- 경로 A: 경쟁사 망 경유
+- 경로 B: 제휴사 망 경유
+
+선택: 경로 B (제휴사 망 우선)
+→ 비즈니스 정책으로 판단
 ```
 
 <br>
 
 ---
 
-## 라우팅 문제 및 해결
-
-### Count to Infinity
-
-**문제**
-```
-Distance Vector에서 링크 장애 시 
-무한히 업데이트가 순환하는 문제
-
-A ↔ B ↔ C
-B-C 링크 다운 시:
-B → A: C까지 2홉
-A → B: C까지 3홉
-B → A: C까지 4홉
-...무한 반복
-```
-
-**해결책**
-- **Split Horizon**: 정보를 받은 방향으로 다시 보내지 않음
-- **Poison Reverse**: 도달 불가 경로를 무한대(16)로 표시
-- **Maximum Hop Count**: 최대 홉 수 제한 (RIP는 15)
-
-<br>
-
-### 라우팅 루프
-
-**문제**
-- 패킷이 여러 라우터 사이를 계속 순환
-
-**해결책**
-- **TTL (Time To Live)**: 홉 수 제한, 0이 되면 폐기
-- Link State 알고리즘 사용
-
-<br>
-
----
-
-## 핵심 정리
-
-### 라우팅의 목적
-```
-출발지 → 목적지까지 최적 경로 결정
-```
-
-### 라우팅 방식 선택
-```
-소규모 고정 네트워크: 정적 라우팅
-대규모 동적 네트워크: 동적 라우팅
-```
-
-### 알고리즘 비교
-```
-Distance Vector:
-- 간단, 소규모
-- RIP
-
-Link State:
-- 복잡, 대규모, 빠른 수렴
-- OSPF
-```
-
-### 프로토콜 선택
-```
-AS 내부:
-- 소규모: RIP
-- 중대규모: OSPF
-
-AS 간:
-- BGP (인터넷 백본)
-```
-
-### 최적 경로 기준
-```
-메트릭 기반:
-- 홉 수 (RIP)
-- 대역폭 (OSPF)
-- 정책 (BGP)
-```
