fix(week7-NW) : 사진 및 개념 추가

--- a/sngjuni/NW/07_흐름 제어 & 혼잡 제어.md
+++ b/sngjuni/NW/07_흐름 제어 & 혼잡 제어.md
@@ -14,8 +14,11 @@
 - TCP는 수신 측이 자신의 **수신 버퍼 크기(RWND, Receive Window)** 를 송신 측에 알려줌으로써 “이만큼까지만 보내라”는 신호를 전달한다.
 - 송신 측은 RWND 값을 기준으로 전송 가능한 데이터 양을 제한한다.
 - 수신 측 윈도우
+
   ![r_window.png](./images/r_window.png)
+
 - 송신 측 윈도우
+
   ![s_window.png](./images/s_window.png)
 
 **작동 과정**
@@ -49,19 +52,30 @@
 
 ![congestion_control.png](./images/congestion_control.png)
 
-1. **Slow Start (느린 시작)**
-   - 처음에는 전송 속도를 매우 낮게 시작 (CWND = 1 MSS)
-   - ACK이 오면 CWND(혼잡 윈도우)를 **지수적으로(2배씩)** 증가시킴
-   - 혼잡이 감지되면 CWND를 절반으로 줄이고 다시 시작
-2. **Congestion Avoidance (혼잡 회피)**
-   - 일정 임계점(ssthresh)에 도달하면 CWND를 선형적으로 증가
-   - 네트워크를 안정적으로 유지
-3. **Fast Retransmit (빠른 재전송)**
-   - 동일한 ACK(중복 ACK)를 3번 연속 수신하면
-     → 타임아웃 기다리지 않고 손실로 판단하여 즉시 재전송
-4. **Fast Recovery (빠른 회복)**
-   - 패킷 손실이 감지된 후 CWND를 절반으로 줄이고
-     → 혼잡 회피 단계로 바로 복귀 (느린 시작으로 돌아가지 않음)
+1.  **Slow Start (느린 시작)**
+    - 처음에는 전송 속도를 매우 낮게 시작 (CWND = 1 MSS)
+    - ACK이 오면 CWND(혼잡 윈도우)를 **지수적으로(2배씩)** 증가시킴
+    - 혼잡이 감지되면 CWND를 절반으로 줄이고 다시 시작
+2.  **Congestion Avoidance (혼잡 회피)**
+    - 일정 임계점(ssthresh)에 도달하면 CWND를 선형적으로 증가
+    - 네트워크를 안정적으로 유지
+3.  **Fast Retransmit (빠른 재전송)**
+
+    ![3_dup_ack.png](./images/3_dup_ack.png)
+
+    - 동일한 ACK(중복 ACK)를 3번 연속 수신하면
+      → 타임아웃 기다리지 않고 손실로 판단하여 즉시 재전송
+
+4.  **Fast Recovery (빠른 회복)**
+    - 패킷 손실이 감지된 후 CWND를 절반으로 줄이고
+      → 혼잡 회피 단계로 바로 복귀 (느린 시작으로 돌아가지 않음)
+
+**TCP 패킷 손실시**
+
+| 상황               | TCP 반응                                                 |
+| ------------------ | -------------------------------------------------------- |
+| **타임아웃 발생**  | 심각한 혼잡으로 판단 → **Slow Start 재진입 (cwnd=1)**    |
+| **3중복 ACK 발생** | 일시적 손실로 판단 → **Fast Retransmit + Fast Recovery** |
 
 **핵심 변수**
 
