--- a/kinam-ssafy/NW/09. DNS & DHCP.md
+++ b/kinam-ssafy/NW/09. DNS & DHCP.md
@@ -16,6 +16,42 @@
 
 <br>
 
+## DHCP의 필요성
+
+### 근본적인 문제
+네트워크에 연결하려면 다음 정보가 **반드시** 필요함:
+- IP 주소
+- 서브넷 마스크
+- 게이트웨이 주소
+- DNS 서버 주소
+
+**이걸 일일이 수동으로 설정하면:**
+- 너무 복잡하고 불편함
+- 실수로 잘못 입력하면 인터넷 안 됨
+- IP 주소 중복 문제 발생 가능
+
+### DHCP의 해결책
+**네트워크에 연결하면 필요한 모든 정보를 자동으로 할당**
+```
+컴퓨터 켜기
+    ↓
+DHCP 서버에 요청
+    ↓
+자동으로 받음:
+- IP: 192.168.0.4
+- 서브넷: 255.255.255.0
+- 게이트웨이: 192.168.0.1
+- DNS: 8.8.8.8
+    ↓
+바로 인터넷 사용 가능!
+```
+
+### 추가 장점
+
+- IP 재사용 가능: 임대 기간이 끝나면 다른 기기에 할당 가능  
+- IP 주소 관리 편리: 중앙에서 일괄 관리  
+- 충돌 방지: DHCP 서버가 알아서 중복 안 되게 관리  
+
 -----
 
 ## DHCP의 구성
@@ -64,6 +100,28 @@ IP 주소 할당(임대) 절차는 4개의 메시지로 구성됨.
   - **주요 파라미터**:
       - `Client MAC`: 클라이언트의 MAC 주소
 
+```
+MAC 주소란?
+네트워크 카드(NIC)에 할당된 고유한 물리적 주소
+
+48비트 = 6바이트
+16진수로 표현: AA:BB:CC:DD:EE:FF
+예: 00:1A:2B:3C:4D:5E
+
+브로드캐스트 MAC 주소
+FF:FF:FF:FF:FF:FF의 의미
+"이 네트워크에 연결된 모든 장치에게 보내는 주소"
+
+DHCP에서 브로드캐스트를 사용하는 이유
+
+문제:
+클라이언트(컴퓨터)가 방금 켜졌을 때
+- IP 주소가 없음
+- DHCP 서버의 IP 주소도 모름
+- DHCP 서버의 MAC 주소도 모름
+
+어떻게 DHCP 서버에게 연락함? -> 브로드캐스트!
+```
 ### 2\. DHCP Offer
 
   - **패킷 방향**: DHCP 서버 -\> 클라이언트
@@ -112,12 +170,20 @@ IP 주소 할당(임대) 절차는 4개의 메시지로 구성됨.
   - DNS는 **브라우징을 단순화하는 목적**을 수행
 
 **필요성**
+- 네트워크의 모든 컴퓨터는 고유 IP 주소를 가짐
+- 예: 125.209.222.141, 192.168.0.1 같은 숫자 주소  
+- 사람이 이런 숫자를 외우고 기억하는 건 불가능
 
-  - 네트워크의 모든 컴퓨터는 고유 IP 주소를 가짐
-  - 사이트 방문 시 IP 주소를 매번 기억하는 것은 불가능
-  - `https://kinam/ssafy` 같은 **도메인 이름**을 `125.209.222.141` 같은 **IP 주소**로 변환
-  - 이 DNS를 운영하는 서버를 \*\*네임서버(Name Server)\*\*라고 함
+### DNS의 해결책  
+사람이 기억하기 쉬운 도메인 이름을 IP 주소로 자동 변환
 
+```
+사용자가 입력: www.naver.com  
+        ↓  
+DNS가 변환: 223.130.200.107  
+        ↓  
+실제 접속: 네이버 서버  
+```
 <br>
 
 -----
@@ -131,3 +197,4 @@ IP 주소 할당(임대) 절차는 4개의 메시지로 구성됨.
 
 
 ![alt text](image/21.png)
+
