fix(week7-NW): 흐름 제어 & 혼잡 제어 내용 추가 및 수정

--- a/valofosho/NW/07_흐름 제어 & 혼잡 제어.md
+++ b/valofosho/NW/07_흐름 제어 & 혼잡 제어.md
@@ -47,7 +47,14 @@
 → 송신자는 4KB까지만 추가로 전송 가능
 
 ```
+---
 
+### 📘 대표 알고리즘 — **Stop-and-Wait**
+
+> 세그먼트 1개 전공 -> ACK 올 때 까지 대기(다음 전송 불가)
+- 장점: 구현 / 오류복구 간단.
+- 단점: 지연 손실 시 타임아웃 -> 재전송으로 효율 저하, 중복 프레임 가능.
+---
 ---
 
 ### 📘 대표 알고리즘 — **Sliding Window Protocol**
