fix(week9-DB) : 내용 추가 및 수정

--- a/sngjuni/DB/02_관계형 DB 기본.md
+++ b/sngjuni/DB/02_관계형 DB 기본.md
@@ -37,6 +37,9 @@
 
    ➡ 키를 통해 데이터의 **무결성**을 보장하고, 테이블 간의 관계를 정의함.
 
+   > 유일성 : 각 튜플(행)을 유일하게 식별할 수 있음. <br/>
+   > 최소성 : 식별에 꼭 필요한 최소한의 속성만 포함.
+
 3. 관계형 연산(Relational Operations)
 
    | 연산 종류            | 설명                                | 기호    | 예시                    |
@@ -48,6 +51,9 @@
    | **디비전(Division)** | 특정 조건을 만족하는 모든 튜플 추출 | ÷       | A ÷ B                   |
 
    ➡ 이 연산들은 SQL의 `SELECT`, `JOIN`, `UNION` 등의 명령어로 구현됨.
+
+   > SQL의 실행 순서 : `FROM` → `WHERE` → `SELECT` <br/>
+   > 관계형 연산의 실행 순서 : `선택` → `투영` → `조인` → `집합` → `디비전`
 
 4. 무결성 제약조건(Integrity Constraint)
 
@@ -62,9 +68,10 @@
 
 5. SQL과 관계형 모델
    - 관계형 DB는 **SQL(Structured Query Language)** 을 사용해 데이터 정의 및 조작 수행
-     - **DDL (Data Definition Language)**: CREATE, ALTER, DROP
-     - **DML (Data Manipulation Language)**: SELECT, INSERT, UPDATE, DELETE
-     - **DCL (Data Control Language)**: GRANT, REVOKE
+     - **데이터 정의어 (DDL, Data Definition Language)**: CREATE, ALTER, DROP
+     - **데이터 조작어 (DML, Data Manipulation Language)**: SELECT, INSERT, UPDATE, DELETE
+     - **데이터 제어어 (DCL, Data Control Language)**: GRANT, REVOKE
+     - **트랜잭션 제어어 (TCL, Transaction Control Language)**: COMMIT, ROLLBACK
    - SQL은 관계형 연산(선택, 투영, 조인 등)을 **명령형 언어**로 표현한 것
 
 **특징**
