docs(week9-DB): 조인 알고리즘 내용 추가

--- a/miayujeong/DB/06_조인 알고리즘.md
+++ b/miayujeong/DB/06_조인 알고리즘.md
@@ -35,6 +35,8 @@ for each row in A:
             output(A, B)
 ```
 
+<img src="images/DB_06_1.png">
+
 #### 특징
 
 - 인덱스가 존재하면 매우 빠름 (Index Nested Loop Join)
@@ -68,12 +70,14 @@ for each row in large_table:
     match = hash_table.lookup(row.key)
 ```
 
+<img src="images/DB_06_3.png">
+
 #### 특징
 
 - 등호(=) 비교에 최적화 (`ON A.id = B.id`)
 - 해시 테이블 생성 시 초기 비용 발생
 - 정렬 과정이 필요 없어 대용량 조인에 유리
-- MySQL에서는 주로 `Block Nested Loop Join`이 쓰이고, PostgreSQL/Oracle에서 Hash Join이 적극 사용됨
+- MySQL에서는 주로 Block Nested Loop Join이 쓰이고, PostgreSQL/Oracle에서 Hash Join이 적극 사용됨
 
 #### 성능 요약
 
@@ -85,7 +89,7 @@ for each row in large_table:
 
 <br>
 
-### Soft-Merge Join (정렬 병합 조인)
+### Sort-Merge Join (정렬 병합 조인)
 
 #### 동작 방식
 
@@ -99,6 +103,8 @@ sort B on key;
 merge A and B while A.key = B.key;
 
 ```
+
+<img src="images/DB_06_2.png">
 
 #### 특징 
 
