fix(week9-DB) : 내용 및 사진 추가

--- a/sngjuni/DB/05_인덱스.md
+++ b/sngjuni/DB/05_인덱스.md
@@ -21,16 +21,22 @@
    - **B+Tree 인덱스**
      ![b+tree.png](./images/btree.png)
      - 대부분의 RDBMS에서 사용하는 기본 구조
-     - 균형 트리 형태로 정렬된 데이터 유지 → **범위 검색(>, <)** 가능
+     - 균형 트리 형태로 정렬된 데이터 유지 → **범위 검색(>, <, BETWEEN)** 가능
+     ![tree.png](./images/tree.png)
+     - **클러스터드 인덱스 (Clustered Index)**
+       - 실제 데이터가 인덱스 순서대로 저장됨 (테이블 자체가 인덱스 구조)
+       - 한 테이블당 하나만 생성 가능 (주로 기본키)
+     - **논클러스터드 인덱스 (Non-clustered Index)**
+       - 인덱스와 데이터가 분리되어 있음 → 추가적인 포인터 탐색 필요
+     - **복합 인덱스 (Composite Index)**
+       - 여러 컬럼을 묶어 하나의 인덱스로 구성 (예: `(name, age)`)
    - **Hash 인덱스**
      - 키를 해싱하여 값 저장 → **동등 비교(=)** 에 빠름, 범위 검색에는 부적합
-   - **클러스터드 인덱스 (Clustered Index)**
-     - 실제 데이터가 인덱스 순서대로 저장됨 (테이블 자체가 인덱스 구조)
-     - 한 테이블당 하나만 생성 가능 (주로 기본키)
-   - **논클러스터드 인덱스 (Non-clustered Index)**
-     - 인덱스와 데이터가 분리되어 있음 → 추가적인 포인터 탐색 필요
-   - **복합 인덱스 (Composite Index)**
-     - 여러 컬럼을 묶어 하나의 인덱스로 구성 (예: `(name, age)`)
+     - 정렬 불가능, 복합 인덱스에서 일부 컬럼만 검색 불가
+   - **Bitmap 인덱스**
+     - 각 값에 대해 비트맵(0/1 배열)을 만들고 비트 연산(AND/OR/XOR)으로 빠르게 필터링하는 구조
+     - 카디널리티 낮은 컬럼에서 최고 효율(gender, Y/N, status 등)
+     - 비트 연산 → 집계가 엄청 빠름
 3. **인덱스 사용 시 고려사항**
    - `WHERE`, `JOIN`, `ORDER BY`, `GROUP BY` 절에 자주 등장하는 컬럼에 인덱스를 설정하는 것이 효과적
    - 인덱스가 많아질수록 `INSERT`, `UPDATE`, `DELETE` 시 **추가적인 오버헤드** 발생
@@ -61,11 +67,11 @@
 
 ## 관련 면접 질문
 
-- ❓ **인덱스란 무엇인가요?**
+- 인덱스란 무엇인가요?
   - 데이터를 빠르게 조회하기 위해 특정 컬럼에 생성하는 자료 구조로, 탐색 속도를 높이기 위해 사용됩니다.
-- ❓ **B+Tree 인덱스와 Hash 인덱스의 차이는 무엇인가요?**
+- B+Tree 인덱스와 Hash 인덱스의 차이는 무엇인가요?
   - B+Tree는 정렬된 구조로 범위 검색이 가능하고, Hash 인덱스는 동등 비교에 빠르지만 범위 검색이 불가능합니다.
-- ❓ **인덱스 사용 시 주의할 점은 무엇인가요?**
+- 인덱스 사용 시 주의할 점은 무엇인가요?
   - 인덱스는 조회 성능은 높이지만, 삽입·수정·삭제 시 오버헤드가 발생하므로 적절한 컬럼에만 설정해야 합니다.
-- ❓ **클러스터드 인덱스와 논클러스터드 인덱스의 차이는?**
+- 클러스터드 인덱스와 논클러스터드 인덱스의 차이는?
   - 클러스터드는 실제 데이터가 인덱스 순서로 저장되고, 논클러스터드는 인덱스가 별도로 존재해 데이터 위치를 참조합니다.
