--- a/kinam-ssafy/DB/05. 인덱스.md
+++ b/kinam-ssafy/DB/05. 인덱스.md
@@ -54,11 +54,19 @@
 Hash(key) → Bucket → Data
 ```
 
+| 요소 | 설명 |
+|------|------|
+| **Hash 함수** | 입력값 → 고정된 숫자(주소)로 변환 |
+| **Bucket** | 데이터가 저장되는 저장소 |
+| **직접 접근** | 계산된 주소로 **한 번에** 이동 |
+
 **특징**
 - 등호(=) 검색에 매우 빠름: O(1)
 - 범위 검색 불가능
 - ORDER BY 사용 불가
 - 주로 메모리 기반 DB에서 사용
+
+
 
 | 검색 타입 | B-Tree | Hash |
 |----------|--------|------|
@@ -72,6 +80,66 @@ Hash(key) → Bucket → Data
 **적합한 경우**
 - 카디널리티가 낮은 컬럼 (성별, 지역 등)
 - 읽기 작업이 많고 쓰기 작업이 적은 경우
+
+
+| 개념 | 설명 |
+|------|------|
+| **카디널리티** | 컬럼에서 **중복을 제거한 고유한 값의 개수** |
+| **높은 카디널리티** | 고유 값이 많음 (주민번호, 이메일 등) |
+| **낮은 카디널리티** | 고유 값이 적음 (성별, 지역, Y/N 등) |
+
+
+### 카디널리티 비교
+| 컬럼 | 전체 데이터 | 고유 값 개수 | 카디널리티 |
+|------|----------|------------|----------|
+| **주민번호** | 1,000,000명 | 1,000,000개 | **매우 높음** |
+| **이메일** | 1,000,000명 | 950,000개 | **높음** |
+| **나이** | 1,000,000명 | 100개 | 중간 |
+| **지역** | 1,000,000명 | 17개 | **낮음** |
+| **성별** | 1,000,000명 | 2개 | **매우 낮음** |
+
+
+#### 예시: 100만 명의 성별 데이터
+
+#### B-Tree Index (일반 인덱스)
+```
+성별 인덱스 저장:
+M → [1, 3, 5, 6, 8, 10, 11, 13, ...]  ← ID 리스트
+F → [2, 4, 7, 9, 12, 14, 15, ...]     ← ID 리스트
+
+100만 건 × 4byte(ID) = 4MB
+```
+
+#### Bitmap Index
+```
+M: [101101011010...]  ← 비트로 표현
+F: [010010100101...]  ← 비트로 표현
+
+100만 건 × 1bit = 125KB
+압축률: 약 32배 절약
+```
+
+### 다중 조건 검색에 매우 빠름
+
+#### 쿼리 예시
+```sql
+SELECT * FROM users 
+WHERE gender = 'M' 
+  AND region = '서울'
+  AND status = 'active';
+```
+
+#### Bitmap 연산 (비트 AND 연산)
+```
+gender='M':     [1,0,1,0,1,1,0,1,0,1]
+region='서울':  [1,1,0,0,1,0,0,1,1,0]
+status='active':[1,0,1,1,1,0,1,1,0,1]
+───────────────────────────────────── AND 연산
+결과:           [1,0,0,0,1,0,0,1,0,0]
+                ↑        ↑     ↑
+               id1      id5   id8 찾음!
+```
+
 
 ## 인덱스 종류
 
@@ -98,6 +166,71 @@ Hash(key) → Bucket → Data
 (A) → ptr1 → [id:2, name:A]
 (B) → ptr2 → [id:1, name:B]
 ```
+
+### 클러스터드 Index (포인터 없음)
+```
+인덱스 = 실제 데이터 위치
+
+[B-Tree 구조]
+    [50]
+   /    \
+[25]    [75]
+ ↓       ↓
+실제 데이터 저장 위치
+(디스크의 물리적 위치)
+```
+
+### 논클러스터드 Index (포인터 있음)
+```
+인덱스 → 포인터 → 실제 데이터
+
+[B-Tree 구조]         [포인터]      [실제 데이터]
+    [name:B]     →    0x1A2B  →   [id:1, name:B, age:25]
+       /\
+[name:A][name:C] →    0x3C4D  →   [id:3, name:C, age:30]
+```
+
+
+## 포인터의 장점
+
+### 1. 여러 개 생성 가능
+
+#### 클러스터드 (테이블당 1개만)
+```
+users 테이블의 물리적 정렬:
+id 순서로만 정렬됨 (변경 불가)
+
+[1, 홍길동, 25]
+[2, 김영희, 30]
+[3, 박철수, 22]
+↑ id 기준으로 물리적 정렬
+```
+
+#### 논클러스터드 (여러 개 가능)
+```
+users 테이블 (id 순서 유지):
+[1, 홍길동, 25]  ← 0x1000 주소
+[2, 김영희, 30]  ← 0x2000 주소
+[3, 박철수, 22]  ← 0x3000 주소
+
+name 인덱스 (별도):          age 인덱스 (별도):
+[김영희] → 0x2000           [22] → 0x3000
+[박철수] → 0x3000           [25] → 0x1000
+[홍길동] → 0x1000           [30] → 0x2000
+
+→ 원본 테이블은 그대로, 인덱스만 각자 정렬!
+```
+
+| 특징 | 클러스터드 | 논클러스터드 |
+|------|-----------|-------------|
+| 개수 제한 | 1개만 | **여러 개** |
+| 테이블 변경 | 물리적 재정렬 | **변경 없음** |
+| 생성 영향 | 큼 | 작음 |
+
+
+
+
+
 
 ## 복합 인덱스와 순서
 
