docs(week9-DB) : 정규화 & 반정규화 사진 추가

--- a/aeongseo/DB/07_정규화 & 반정규화.md
+++ b/aeongseo/DB/07_정규화 & 반정규화.md
@@ -29,6 +29,10 @@
         - 각 컬럼은 하나의 값(속성)만 가짐
         - 각 컬럼은 같은 종류나 타입의 값 가져야 함 (ex.  문자열, 숫자를 동일 컬럼에 저장 X)
         - 컬럼의 배치 순서는 상관 없어야 함
+ 
+ ![1NF](images/1NF.png)
+
+
 - 제2정규형(2NF)
     - 제1정규화를 지키고 있는 테이블에 대한 부분 함수 종속성을 제거하는 과정
     - 모든 기본키의 부분 집합에 의존하는 컬럼들을 분리하여 새로운 테이블 만듦
@@ -36,18 +40,26 @@
     - 규칙
         - 제1정규화를 만족해야 함
         - 모든 컬럼이 완전 함수 종속을 만족해야 함
+ 
+ ![2NF](images/2NF.png)
+
 - 제3정규형(3NF)
     - 제2정규화를 지키고 있는 테이블에 대한 이행적 종속을 없애도록 테이블을 분해하는 것
         - 이행적 종속 : A → B, B → C가 성립할 때 A→ C가 성립되는 것을 의미
     - 규칙
         - 제2정규화를 만족해야 함
         - 기본키를 제외한 속성들 간의 이행 종속성이 없어야 함
+ 
+ ![3NF](images/3NF.png)
+
 - BCNF(Boyce-codd Normal Form)
     - 3차 정규화에서 해결할 수 없는 이상현상을 해결하기 위해 3차 정규화를 강화한 버전
     - 규칙
         - 제3정규화를 만족해야 함
         - 모든 결정자가 후보키 집합에 속해야 함
             - 후보키 집합에 없는 컬럼이 결정자가 되어서는 안된다는 뜻
+ 
+ ![BCNF](images/BCNF.png)
 
 ---
 
