fix(week10-DP) : 전략 & 템플릿 메서드 내용 수정

--- a/kinam-ssafy/DP/02. 전략 & 템플릿 메서드.md
+++ b/kinam-ssafy/DP/02. 전략 & 템플릿 메서드.md
@@ -1,3 +1,5 @@
+
+
 # 전략 & 템플릿 메서드 패턴
 
 ## 들어가기 전 알아야 할 개념
@@ -9,9 +11,9 @@
 | **다형성** | 같은 인터페이스로 다른 동작 수행 |
 | **알고리즘** | 특정 문제를 해결하는 절차나 방법 |
 
----
+-----
 
-## 1. 전략 패턴 (Strategy Pattern)
+## 1\. 전략 패턴 (Strategy Pattern)
 
 ### 1.1 정의
 
@@ -20,11 +22,41 @@
 **핵심 아이디어**: 알고리즘을 사용하는 클라이언트와 독립적으로 알고리즘을 변경할 수 있음
 
 **목적**:
-- 알고리즘 군을 정의하고 캡슐화
-- 런타임에 알고리즘 교체 가능
-- 조건문(if-else, switch) 제거
 
----
+  - 알고리즘 군을 정의하고 캡슐화
+  - 런타임에 알고리즘 교체 가능
+  - 조건문(if-else, switch) 제거
+
+### 탄생 배경
+
+  - 개발을 하다 보니, 상황에 따라 행동이 달라져야 하는 경우가 많은데, 그때마다 `if-else`로 분기 처리를 하니 코드가 너무 지저분해짐
+
+**문제 상황 (RPG 게임)**:
+
+```java
+// 전략 패턴이 없던 시절 (스파게티 코드)
+class Monster {
+    void attack() {
+        if (type == "SLIME") {
+            print("점액 공격!");
+        } else if (type == "DRAGON") {
+            print("불뿜기!");
+        } else if (type == "ZOMBIE") {
+            print("물어뜯기!");
+        }
+        // ... 몬스터 종류가 추가될 때마다 이 코드를 계속 뜯어고쳐야 함 (OCP 위반)
+    }
+}
+```
+
+  - **문제점 1**: 새로운 몬스터가 추가될 때마다 기존 코드를 수정해야 함
+  - **문제점 2**: 런타임에(게임 도중에) 공격 방식을 바꾸기가 어려움
+
+**해결책**:
+
+  - "변하는 부분(공격 방식)"을 아예 별도의 클래스(부품)로 분리해서, 필요할 때 갈아 끼우자\!
+
+-----
 
 ### 1.2 전략 패턴 구조
 
@@ -62,7 +94,7 @@
 | **ConcreteStrategy** | 실제 알고리즘 구현 |
 | **Context** | Strategy를 사용하는 클래스, 런타임에 교체 가능 |
 
----
+-----
 
 ### 1.3 전략 패턴 동작 흐름
 
@@ -78,14 +110,14 @@
 3. 실행
    context.execute() → StrategyA의 algorithm() 호출
 
-4. 전략 변경
+4. 전략 변경 (무기 교체와 비슷)
    context.setStrategy(new StrategyB())
 
 5. 다시 실행
    context.execute() → StrategyB의 algorithm() 호출
 ```
 
----
+-----
 
 ### 1.4 전략 패턴 예시
 
@@ -118,7 +150,7 @@ context.setStrategy(naverPayStrategy)
 context.pay() → 네이버페이로 결제
 ```
 
----
+-----
 
 ### 1.5 전략 패턴의 장단점
 
@@ -127,7 +159,7 @@ context.pay() → 네이버페이로 결제
 | **장점** | • 알고리즘 교체 용이 (런타임 변경)<br>• 조건문 제거로 코드 간결<br>• 개방-폐쇄 원칙 준수 (새 전략 추가 쉬움)<br>• 테스트 용이 (각 전략 독립 테스트) |
 | **단점** | • 클래스 개수 증가<br>• 클라이언트가 전략을 알고 선택해야 함<br>• 전략이 적으면 오버엔지니어링 |
 
----
+-----
 
 ### 1.6 전략 패턴 사용 시기
 
@@ -138,9 +170,9 @@ context.pay() → 네이버페이로 결제
 | **조건문 과다** | if-else, switch가 복잡하게 얽힘 |
 | **알고리즘 독립성** | 알고리즘을 클라이언트와 분리 |
 
----
+-----
 
-## 2. 템플릿 메서드 패턴 (Template Method Pattern)
+## 2\. 템플릿 메서드 패턴 (Template Method Pattern)
 
 ### 2.1 정의
 
@@ -149,11 +181,27 @@ context.pay() → 네이버페이로 결제
 **핵심 아이디어**: 전체 알고리즘 구조는 상위 클래스에서 정의하고, 세부 구현은 하위 클래스에 위임
 
 **목적**:
-- 알고리즘 구조 재사용
-- 공통 로직 중복 제거
-- 변하지 않는 부분과 변하는 부분 분리
 
----
+  - 알고리즘 구조 재사용
+  - 공통 로직 중복 제거
+  - 변하지 않는 부분과 변하는 부분 분리
+
+### 탄생 배경
+
+  - 두 개의 클래스가 "거의 비슷한데 아주 조금만 다를 때" 발생하는 무한 복사+붙여넣기 문제(중복 코드)를 해결하기 위해 탄생
+
+**문제 상황 (음료 제조)**:
+
+  - 커피 만드는 법: 물 끓이기 → **원두 갈기** → 컵에 붓기 → **우유 넣기**
+  - 홍차 만드는 법: 물 끓이기 → **티백 넣기** → 컵에 붓기 → **레몬 넣기**
+
+개발자가 보니 "물 끓이기"랑 "컵에 붓기"는 코드가 100% 똑같은데, 각각 복사해서 쓰다가 하나라도 수정할 때 실수가 발생함.
+
+**해결책**:
+
+  - "공통된 순서(빈칸 채우기 시험지)는 부모 클래스에 몰아넣고, 서로 다른 빈칸만 자식에게 맡기자\!"
+
+-----
 
 ### 2.2 템플릿 메서드 구조
 
@@ -185,11 +233,11 @@ context.pay() → 네이버페이로 결제
 | 요소 | 역할 |
 |------|------|
 | **Abstract Class** | 템플릿 메서드 정의, 알고리즘 골격 제공 |
-| **Template Method** | 알고리즘 구조 정의 (보통 final) |
+| **Template Method** | 알고리즘 구조 정의 (보통 final로 오버라이드 막음) |
 | **Primitive Operations** | 서브클래스에서 구현할 추상 메서드 |
 | **Concrete Class** | 추상 메서드 구체적 구현 |
 
----
+-----
 
 ### 2.3 템플릿 메서드 동작 흐름
 
@@ -204,10 +252,10 @@ Client → ConcreteA.templateMethod() 호출
              ├─ step2() (변경) ← ConcreteA 구현
              └─ step3() (공통) ← AbstractClass 구현
 
-핵심: 전체 흐름은 상위 클래스가 제어, 세부 구현만 하위 클래스
+핵심: 전체 흐름은 상위 클래스가 제어(할리우드 원칙), 세부 구현만 하위 클래스
 ```
 
----
+-----
 
 ### 2.4 템플릿 메서드 예시
 
@@ -239,7 +287,7 @@ Tea (구현)
 └─ addCondiments() → "레몬 추가"
 ```
 
----
+-----
 
 ### 2.5 Hook 메서드
 
@@ -267,7 +315,7 @@ ConcreteClass
    └─ return false (첨가물 원하지 않음)
 ```
 
----
+-----
 
 ### 2.6 템플릿 메서드의 장단점
 
@@ -276,7 +324,7 @@ ConcreteClass
 | **장점** | • 코드 재사용성 높음 (공통 로직 상위 클래스)<br>• 알고리즘 구조 통제 (상위 클래스가 제어)<br>• 중복 코드 제거<br>• 할리우드 원칙 (Don't call us, we'll call you) |
 | **단점** | • 상속 구조 강제 (상속의 단점 포함)<br>• 알고리즘 단계가 많으면 복잡<br>• 템플릿 메서드 수정 시 모든 서브클래스 영향 |
 
----
+-----
 
 ### 2.7 템플릿 메서드 사용 시기
 
@@ -287,9 +335,9 @@ ConcreteClass
 | **중복 코드 제거** | 공통 부분을 상위 클래스로 추출 |
 | **제어 역전** | 상위 클래스가 하위 클래스 메서드 호출 |
 
----
+-----
 
-## 3. 전략 vs 템플릿 메서드
+## 3\. 전략 vs 템플릿 메서드
 
 | 비교 | 전략 패턴 | 템플릿 메서드 패턴 |
 |------|-----------|-------------------|
@@ -322,9 +370,9 @@ A   B
 └─→ 컴파일 시 A 또는 B 선택, 이후 변경 불가
 ```
 
----
+-----
 
-## 4. 언제 무엇을 사용할까?
+## 4\. 언제 무엇을 사용할까?
 
 | 선택 기준 | 전략 패턴 | 템플릿 메서드 패턴 |
 |----------|-----------|-------------------|
@@ -335,9 +383,9 @@ A   B
 | **상속 피하고 싶음** | ✓ 사용 (구성 활용) | ✗ 불가 (상속 필수) |
 | **다중 알고리즘 조합** | ✓ 여러 전략 조합 가능 | ✗ 어려움 |
 
----
+-----
 
-## 5. 실전 사용 예시
+## 5\. 실전 사용 예시
 
 ### 전략 패턴 사용 예시
 
@@ -358,9 +406,9 @@ A   B
 | **테스트** | setUp → 테스트 실행 → tearDown |
 | **웹 요청** | 인증 → 요청 처리 → 응답 (처리만 변경) |
 
----
+-----
 
-## 6. 핵심 정리
+## 6\. 핵심 정리
 
 | 패턴 | 핵심 포인트 |
 |------|-----------|
@@ -376,7 +424,7 @@ A   B
 알고리즘 구조는 고정? → 템플릿 메서드
 ```
 
----
+-----
 
 ## 면접 질문
 
@@ -405,10 +453,11 @@ b.templateMethod() → B의 구현 실행
 ```
 
 **추가 설명**:
-- 전략: 알고리즘을 **객체로** 취급 (교체 가능한 부품처럼)
-- 템플릿 메서드: 알고리즘을 **클래스로** 정의 (상속으로 변형)
 
----
+  - 전략: 알고리즘을 **객체로** 취급 (교체 가능한 부품처럼)
+  - 템플릿 메서드: 알고리즘을 **클래스로** 정의 (상속으로 변형)
+
+-----
 
 ### Q2. 둘 다 알고리즘을 다루는데, 언제 어떤 것을 선택해야 하는가?
 
@@ -422,25 +471,3 @@ b.templateMethod() → B의 구현 실행
 | 공통 로직이 많고 일부만 다른가? | | ✓ |
 | 상속을 사용해도 괜찮은가? | | ✓ |
 | 여러 알고리즘을 조합해야 하는가? | ✓ | |
-
-**구체적 예시**:
-
-```
-상황 1: 결제 방식 선택
-- 사용자가 체크아웃 시 결제 방식 선택
-- 신용카드 ↔ 카카오페이 ↔ 네이버페이 전환
-→ 전략 패턴 (런타임 교체 필요)
-
-상황 2: 데이터 리포트 생성
-- 모든 리포트: 데이터 로드 → 가공 → 저장
-- 가공 방식만 다름 (CSV, Excel, PDF)
-→ 템플릿 메서드 (공통 골격 + 일부 변경)
-```
-
-**헷갈리기 쉬운 포인트**:
-
-"전략 패턴도 상속을 쓸 수 있지 않나요?"
-→ 전략에서 Strategy 인터페이스를 구현할 때 상속 사용하지만, **Context와 Strategy는 구성 관계**. 핵심은 Context가 Strategy 객체를 **교체 가능하게 보유**한다는 점.
-
-"템플릿 메서드도 런타임에 바꿀 수 있지 않나요?"
-→ 객체를 새로 생성하면 가능하지만, **같은 객체의 알고리즘을 런타임에 바꿀 수는 없음**. 전략 패턴은 객체는 그대로 두고 내부 전략만 교체.
